manifests/21-svc-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: workshop
spec:
  selector: { app: front }
  ports:
  - port: 80
    targetPort: http
