manifests/31-svc-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: workshop
spec:
  selector: { app: api }
  ports:
  - port: 80
    targetPort: http
