manifests/99-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: workshop
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: selfsigned
spec:
  tls:
  - hosts: ["workshop.local"]
    secretName: web-tls
  rules:
  - host: workshop.local
    http:
      paths:
      - path: /front
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 80
